--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^3.6.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "prisma": "^3.6.0",
     "ts-node-dev": "^1.1.8",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
     "ts-node-dev": "^1.1.8"
   }
