--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,21 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.24.0",
     "framer-motion": "^4",
     "next": "12.0.7",
     "next-auth": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "react-modal-sheet": "^1.4.1",
     "sass": "^1.44.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
     "typescript": "^4.5.2"
